se agrega la mascara de pesos

--- a/practica2/templates/cliente/cliente.html.twig
+++ b/practica2/templates/cliente/cliente.html.twig
@@ -233,7 +233,7 @@ const crearProducto = "{{ path('crearProducto') }}";
 										<td>${pedido.departamento}</td>
 										<td>${pedido.municipio}</td>
 										<td>
-											$ ${pedido.totalPedido} pesos
+											${formatoNumeroPrecioProducto(pedido.totalPedido)}
 										</td>
 									</tr>
 								</tbody>
